unified_tests/control_flow/for_condition_trailing_token_before_block/expect/build.text.stderr
lib.copp:2:16: error: expected symbol
      for 1 <= 2 b {
                 ^
